--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -161,6 +161,7 @@ content {
   border-radius: 0 0 4px 4px;
   justify-content: space-between;
   text-shadow: 0px 0px 10px #00fffa;
+  font-size: 20px;
 }
 
 .game-score p {
